--- a/references.bib
+++ b/references.bib
@@ -30,6 +30,26 @@
    issn = {1050-4729},
 }
 
+=== From dl.acm.org ===
+@article{aine2016truncatedincremental,
+   author = {Sandip Aine and Maxim Likhachev},
+   title = {Truncated Incremental Search},
+   journal = {Artif. Intell.},
+   issue_date = {May 2016},
+   volume = {234},
+   number = {C},
+   month = may,
+   year = {2016},
+   issn = {0004-3702},
+   pages = {49 -- 77},
+   numpages = {29},
+   url = {http://dx.doi.org/10.1016/j.artint.2016.01.009},
+   doi = {10.1016/j.artint.2016.01.009},
+   acmid = {2899659},
+   publisher = {Elsevier Science Publishers Ltd.},
+   address = {Essex, UK},
+ } 
+
 === Created manually ===
 @inproceedings{alami1994planalgs,
    author = {R. Alami and J.P. Laumond and T. Sim\'{e}on},
@@ -229,6 +249,20 @@
    issn = {1050-4729},
 }
 
+=== From IEEE Xplore ===
+@inproceedings{boor1999prmgaussiansampling,
+   author = {V. Boor and M. H. Overmars and A. F. van der Stappen},
+   title = {The Gaussian Sampling Strategy for Probabilistic Roadmap
+      Planners},
+   year = {1999},
+   booktitle = {Robotics and Automation, 1999. Proceedings. 1999 IEEE
+      International Conference on},
+   volume = {2},
+   pages = {1018-1023 vol.2},
+   doi = {10.1109/ROBOT.1999.772447},
+   issn = {1050-4729},
+}
+
 @unpublished{branicky2002detvsprobroadmaps,
    author = {Michael S. Branicky and Steven M. LaValle and Kari Olson,
       and Libo Yang},
@@ -336,6 +370,17 @@
    month = jun,
    year = {2005},
    notes = {ISBN 0-262-03327-5},
+}
+
+=== Manual ===
+@inproceedings{choudhury2016pomp,
+   author = {Shushman Choudhury and Christopher M. Dellin
+      and Siddhartha S. Srinivasa},
+   title = {Pareto-Optimal Search Over Configuration Space Beliefs
+      for Anytime Motion Planning},
+   year = {2016},
+   booktitle = {2016 IEEE/RSJ International Conference on Intelligent
+      Robots and Systems},
 }
 
 @inproceedings{cohen2014narms,
@@ -625,6 +670,22 @@
    issn = {1050-4729},
 }
 
+=== From Springer website ===
+@inbook{ferguson2007fielddstar,
+   author = {Dave Ferguson and Anthony Stentz},
+   editor = {Sebastian Thrun and Rodney Brooks and Hugh Durrant-Whyte},
+   title = {Field {D}*: An Interpolation-Based Path Planner and
+      Replanner},
+   booktitle = {Robotics Research: Results of the 12th International
+      Symposium ISRR},
+   year = {2007},
+   publisher = {Springer Berlin Heidelberg},
+   address = {Berlin, Heidelberg},
+   pages = {239 -- 253},
+   isbn = {978-3-540-48113-3},
+   doi = {10.1007/978-3-540-48113-3_22},
+}
+
 === From http://www.sciencedirect.com ===
 @article{fikes1971strips,
    author = {Richard E. Fikes and Nils J. Nilsson},
@@ -700,6 +761,20 @@
    number = {RM-1102},
 }
 
+=== From IEEE Xplore ===
+@inproceedings{gammell2014informedrrtstar,
+   author = {J. D. Gammell and S. S. Srinivasa and T. D. Barfoot},
+   title={Informed RRT*: Optimal sampling-based path planning focused
+      via direct sampling of an admissible ellipsoidal heuristic},
+   year = {2014},
+   month = sep,
+   booktitle = {2014 IEEE/RSJ International Conference on Intelligent
+      Robots and Systems},
+   pages = {2997 -- 3004},
+   doi = {10.1109/IROS.2014.6942976},
+   ISSN = {2153-0858},
+}
+
 === Manual ===
 @inproceedings{gammell2015bitstar,
    author = {Jonathan D. Gammell and Siddhartha S. Srinivasa
@@ -744,6 +819,16 @@
    booktitle = {Proc. of the International Workshop on Algorithmic
       Foundations of Robotics (WAFR)},
    year = {2002},
+}
+
+
+=== From http://www.aaai.org/ocs/index.php/SOCS/SOCS11/paper/view/4037/0 ===
+@inproceedings{gochevetal2011adaptivedim,
+   author = {Kalin Gochev and Benjamin Cohen and Jonathan Butzke
+      and Alla Safonova and Maxim Likhachev},
+   title = {Path Planning with Adaptive Dimensionality},
+   year = {2011},
+   booktitle = {Fourth Annual Symposium on Combinatorial Search},
 }
 
 === From http://www.sciencedirect.com ===
@@ -946,6 +1031,19 @@
    url = {http://ijr.sagepub.com/content/21/3/233.abstract},
    eprint = {http://ijr.sagepub.com/content/21/3/233.full.pdf+html},
    journal = {The International Journal of Robotics Research}
+}
+
+=== From IEEE Xplore ===
+@inproceedings{hsu2005hybridsampling,
+   author = {D. Hsu and G. Sanchez-Ante and Zheng Sun},
+   title = {Hybrid PRM Sampling with a Cost-Sensitive Adaptive Strategy},
+   year = {2005},
+   booktitle = {Proceedings of the 2005 IEEE International Conference
+      on Robotics and Automation},
+   pages = {3874 -- 3880},
+   doi = {10.1109/ROBOT.2005.1570712},
+   issn = {1050-4729},
+   month = apr,
 }
 
 === From IEEE Xplore ===
@@ -1168,17 +1266,15 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{khatib2985potentialfields,
-   author = {Khatib, O.},
-   booktitle = {Robotics and Automation. Proceedings.
-      1985 IEEE International Conference on},
-   title = {Real-time obstacle avoidance for manipulators and mobile
-      robots},
-   year = {1985},
-   month = mar,
-   volume = {2},
-   pages = {500-505},
-   doi = {10.1109/ROBOT.1985.1087247},
+@article{khatib1986potentialfields,
+   author = {Oussama Khatib},
+   title = {Real-Time Obstacle Avoidance for Manipulators and Mobile
+      Robots},
+   journal = {The International Journal of Robotics Research},
+   year = {1986},
+   volume = {5},
+   number = {1},
+   pages = {90 -- 98},
 }
 
 === From http://cs.brown.edu/~pnk/bibtex.html ===
@@ -1211,12 +1307,20 @@
    year = {2004},
 }
 
-=== Manual ===
+=== From dl.acm.org ===
 @inproceedings{koenig2002dstarlite,
    author = {Sven Koenig and Maxim Likhachev},
-   title = {{D* Lite}},
-   booktitle = {Proceedings of AAAI},
+   title = {{D*} {L}ite},
+   booktitle = {Eighteenth National Conference on Artificial
+      Intelligence},
    year = {2002},
+   isbn = {0-262-51129-0},
+   location = {Edmonton, Alberta, Canada},
+   pages = {476 -- 483},
+   numpages = {8},
+   acmid = {777167},
+   publisher = {American Association for Artificial Intelligence},
+   address = {Menlo Park, CA, USA},
 }
 
 === From citeseer ===
@@ -1459,6 +1563,20 @@
    year = {2004},
    publisher = {MIT Press},
    url = {http://papers.nips.cc/paper/2382-ara-anytime-a-with-provable-bounds-on-sub-optimality.pdf}
+}
+
+=== Manual ===
+@article{likhachevetal2008anytimedynamic,
+   author = {Maxim Likhachev and Dave Ferguson and Geoff Gordon
+      and Anthony Stentz and Sebastian Thrun},
+   title = {Anytime Search in Dynamic Graphs},
+   year = 2008,
+   journal = {Artificial Intelligence},
+   volume = {172},
+   number = {14},
+   pages = {1613 -- 1643},
+   issn = {0004-3702},
+   doi = {10.1016/j.artint.2007.11.009},
 }
 
 @misc{likhachev2008sbpl,
