--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -1218,10 +1218,7 @@ are not optimially edge-efficient,
 but they also expose differences in behavior and prompt
 future research directions.
 All experiments were conducted using an open-source
-implementation.\footnote{%
-%https://github.com/personalrobotics/multiset-planning
-Link to implementation hidden for double-blind review.
-}
+implementation.
 Motion planning results were implemented using
 OMPL \citep{sucan2012ompl}.
 
