--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -1101,8 +1101,7 @@ when executing at 1.0 rad/sec.
       }
 \end{figure}
 
-We implemented LEMUR%
-\footnote{URL omitted for double-blind submission.}
+We implemented LEMUR
 as a planner for
 the Open Motion Planning Library (OMPL) \citep{sucan2012ompl}.
 We used the 7D Halton sequence to generate a low-dispersion
