--- a/figs/broadphase-single.tex
+++ b/figs/broadphase-single.tex
@@ -10,7 +10,7 @@
 \node[draw,rectangle,fill=black!5,
   inner sep=0,minimum width=8cm,minimum height=1.0cm]
   (boxmp) at (4,-0.5) {};
-\node[above = -0.5cm of boxmp] {Single-Set Motion Planner};
+\node[above = -0.5cm of boxmp] {Conventional Motion Planner};
 
 % c-space depiction
 \node[draw,fill=white,rectangle,
