--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[nobib]{tufte-book}
 
-%\def\hidenotes{}
+\def\hidenotes{}
 
 % marginfigure textwidth is 144.0pt = 5.0610cm
 %\usepackage{natbib}
